--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ form label {
     border: none;
     border-radius: 5px;
     font-size: 1rem;
-    min-width: 300px;
+    min-width: 250px;
     font-family: "Righteous", sans-serif;
 }
 
@@ -364,6 +364,7 @@ label img {
     font-size: 16px;
     cursor: pointer;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    min-width: 100px;
 }
 
 #salvar-sessao-ut {
@@ -379,6 +380,7 @@ label img {
     font-size: 16px;
     cursor: pointer;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 100px;
 }
 
 #salvar-sessao:hover,
@@ -705,6 +707,10 @@ label img {
     background-color: rgb(47, 46, 46);
     border-radius: 8px;
     padding: 8px;
+}
+
+#lista-jogadores-duplo {
+    min-width: 270px;
 }
 
 .coluna {
@@ -1161,8 +1167,7 @@ label img {
 
     #tabela-registro {
         padding: 12px;
-        border-radius: 0 0 12px 12px;
-        padding-bottom: 5rem;
+        border-radius: 12px;
     }
 
     #adicionar {
@@ -1176,6 +1181,7 @@ label img {
     }
     #pai-cadastro {
         background-color: white;
+        padding-bottom: 2rem;
     }
 
     header {
